tetrate/tis1108/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-jwt-claim-routing
spec:
  validationFailureAction: Enforce
